# evoke

./: .env.cmake  .gitignore  CMakeLists.txt
Vulkan/: frag.spv  main.cpp
Vulkan.xcodeproj/: project.pbxproj
Vulkan.xcodeproj/project.xcworkspace/xcuserdata/timi.xcuserdatad/: UserInterfaceState.xcuserstate
Vulkan.xcodeproj/xcshareddata/xcschemes/: Vulkan.xcscheme
Vulkan.xcodeproj/xcuserdata/timi.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Vulkan.xcodeproj/xcuserdata/timi.xcuserdatad/xcschemes/: xcschememanagement.plist
Vulkan/core/: Application.cpp  Application.h  Window.cpp  Window.h
Vulkan/renderer/: DeviceManager.cpp  DeviceManager.h  VulkanCore.cpp  VulkanCore.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanSwapchain.cpp  VulkanSwapchain.h  evDevice.cpp  evDevice.h  evPhysicalDevice.cpp  evPhysicalDevice.h
Vulkan/renderer/shaders/shaders/: vert.spv
Vulkan/shaders/: compile_shaders.sh  shader.vert  vert.spv
Vulkan/shapes/: Vertex.h
Vulkan/utils/: Logger.h  VulkanUtils.h
src/: main.cpp
src/core/: Application.cpp  Application.h  Window.cpp  Window.h
src/renderer/: VulkaPipeline.cpp  VulkanCore.cpp  VulkanCore.h  VulkanPipeline.h  evDevice.cpp  evDevice.h  evPhysicalDevice.cpp  evPhysicalDevice.h  evSwapchain.cpp  evSwapchain.h
src/shapes/: Vertex.h
src/utils/: Logger.h  VulkanUtils.h
